another way / transform

--- a/loop-2-3/index.html
+++ b/loop-2-3/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="main">
-      <div class="btn btn-prev btn-disable"></div>
+      <div class="btn btn-prev"></div>
       <div class="slider">
         <div class="content">
           <div class="card box1"></div>
